applying fix to Part.toc > Chapter spacing to base.scss (then re-compiling all the others based on base.scss)

--- a/rsuite_assets/pdfmaker/css/holt/nonfiction-55x825.css
+++ b/rsuite_assets/pdfmaker/css/holt/nonfiction-55x825.css
@@ -832,7 +832,7 @@ nav[data-type=toc] li.TOC-ChapterTocch + li.TOC-BackmatterTocbm {
   margin-top: 14.4pt;
 }
 
-nav[data-type=toc] li.TOC-PartTocpt ~ li {
+nav[data-type=toc] li.TOC-PartTocpt ~ li.TOC-ChapterTocch {
   margin-bottom: 0;
 }
 
