--- a/rsuite_assets/pdfmaker/css/holt/pdf.css
+++ b/rsuite_assets/pdfmaker/css/holt/pdf.css
@@ -832,7 +832,7 @@ nav[data-type=toc] li.TOC-ChapterTocch + li.TOC-BackmatterTocbm {
   margin-top: 15pt;
 }
 
-nav[data-type=toc] li.TOC-PartTocpt ~ li {
+nav[data-type=toc] li.TOC-PartTocpt ~ li.TOC-ChapterTocch {
   margin-bottom: 0;
 }
 
