--- a/rsuite_assets/pdfmaker/css/torDOTcom/novella-tighter2.css
+++ b/rsuite_assets/pdfmaker/css/torDOTcom/novella-tighter2.css
@@ -833,7 +833,7 @@ nav[data-type=toc] li.TOC-ChapterTocch + li.TOC-BackmatterTocbm {
   margin-top: 15.2pt;
 }
 
-nav[data-type=toc] li.TOC-PartTocpt ~ li {
+nav[data-type=toc] li.TOC-PartTocpt ~ li.TOC-ChapterTocch {
   margin-bottom: 0;
 }
 
